fix alignment of distance  in BookItem

--- a/src/components/BookItem/_BookItem.scss
+++ b/src/components/BookItem/_BookItem.scss
@@ -111,6 +111,10 @@
   padding-left: $padding-xxs;
 }
 
+.book-item-distance-container {
+  display: flex;
+  align-items: center;
+}
 .book-item-distance {
   font-size: 10px;
   padding-left: 4px;
